2003-11-29  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/mod_skunkweb/mod_skunkweb.c: replace references to AE
	and AED with SkunkWeb.

	* SkunkWeb/Services/sessionHandler/PostgreSQLSessionStore.py:
	several changes so it actually works (previous version did not).

	* SkunkWeb/Services/sessionHandler/SQLSessionStore.py
	(AbstractSQLSessionStore._getPickle): fix for bytea using
	pypgsql. 

2003-11-24  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* pylibs/PyDO/PyDO2.py (_metapydo.__new__): looping through
	<dict>.iteritems() and mutating the dict can lead to hash
	rearrangement, apparently; patch from Jeroen van Dongen (no longer
	use iteritems, which was pointless anyway).

2003-11-22  Jacob Smullyan  <smulloni@bracknell.smullyan.org>

	* SkunkWeb/Services/httpd/protocol.py
	(HTTPProtocol.marshalResponse): bug fix that permits httpd to send
	multiple headers with the same name (as in Set-Cookie).  Thanks to
	Dan Chow for reporting this.

2003-11-17  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* SkunkWeb/Services/product/loader.py (Product.__reallyload): when
	using Python 2.3 or better, using zipimport if the product is a 
	zip file.

2003-10-20 Brian Olsen <brian@qinternet.com>

	* pylibs/PyDO/PyDO.py: Added "order", "limit", and "offset"
	parameters to getSome(), getSomeSQL(), getTupleWhere() and
	getSQLWhere(); they are used to use the respective SQL 
	commands "ORDER BY", "LIMIT" and "OFFSET."

	* pylibs/PyDO/PyDO2.py: Added "order", "limit" and "offset"
	here; it is the same functionality as in PyDO.py.

2003-09-15  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/PyDO/PyDO2.py: Jeroen van Dongen's revision of PyDO2, 
	slightly revised by me (I re-added useAttrs, also took out
	the string module for no particular reason). 

2003-09-07  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/httpd/protocol.py
	(HTTPMethodRequestParser._getEnv): now unquote the path.
